--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         EL MODERNISMO Y LA GENERACIÓN DEL 89
     </header>
     <hr>
-    <p>El Modernismo</p>
-    <p> Características</p>
+    <p class="title">El Modernismo</p>
+    <p2> Características</p2>
     <table>
         <tr>
             <td>Cuando</td>
@@ -40,6 +40,6 @@
             <td>12</td>
         </tr>
     </table>
-
+ 
 </body>
 </html>
